Update AQuA page

--- a/src/pages/projects/alpha2.mdx
+++ b/src/pages/projects/alpha2.mdx
@@ -70,6 +70,70 @@ higher quality and an even broader range of languages.
 Note that all users receive 5,000 words of free translation and 5 minutes of free text-to-speech
 each month, which we anticipate will be sufficient to test out that quality of the service.
 
+<h2>Pricing</h2>
+
+<p>
+  We aim to provide affordable and competitive pricing for Alpha2 services. Two tiers are available for translation, 
+  allowing for flexibility according to budget and project needs.
+</p>
+
+<table style={{ borderCollapse: 'collapse', width: '100%', textAlign: 'left' }}>
+  <thead style={{ backgroundColor: '#f0f0f0' }}>
+    <tr>
+      <th style={{ border: '1px solid #ccc', padding: '10px' }}>Tier</th>
+      <th style={{ border: '1px solid #ccc', padding: '10px' }}>Languages</th>
+      <th style={{ border: '1px solid #ccc', padding: '10px' }}>Features</th>
+      <th style={{ border: '1px solid #ccc', padding: '10px' }}>Pricing (First 1M Words)</th>
+      <th style={{ border: '1px solid #ccc', padding: '10px' }}>Pricing (After 1M Words)</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style={{ border: '1px solid #ccc', padding: '10px' }}><strong>Professional (recommended)</strong></td>
+      <td style={{ border: '1px solid #ccc', padding: '10px' }}>200</td>
+      <td style={{ border: '1px solid #ccc', padding: '10px' }}>
+        <p>Multiple translation models</p>
+        <p>Experimental features:</p>
+        <ul>
+          <li>Glossary</li>
+          <li>HTML tag preservation</li>
+          <li>Translation suggestions</li>
+        </ul>
+      </td>
+      <td style={{ border: '1px solid #ccc', padding: '10px' }}>
+        $0.002 per word<br />
+        <em>($2,000 for 1M words)</em>
+      </td>
+      <td style={{ border: '1px solid #ccc', padding: '10px' }}>
+        $0.001 per word<br />
+        <em>($1,000 per additional 1M)</em>
+      </td>
+    </tr>
+    <tr>
+      <td style={{ border: '1px solid #ccc', padding: '10px' }}><strong>Custom</strong></td>
+      <td style={{ border: '1px solid #ccc', padding: '10px' }}>
+        1,400+<br />
+        (available on request within 24 hours)
+      </td>
+      <td style={{ border: '1px solid #ccc', padding: '10px' }}>
+        <ul>
+          <li>Fine-tuned models</li>
+          <li>Tailored per language/project</li>
+        </ul>
+      </td>
+      <td style={{ border: '1px solid #ccc', padding: '10px' }}>
+        $0.01 per word<br />
+        <em>($10,000 for 1M words)</em>
+      </td>
+      <td style={{ border: '1px solid #ccc', padding: '10px' }}>
+        $0.005 per word<br />
+        <em>($5,000 per additional 1M)</em>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+
 <Button 
   label="TRY ALPHA2" 
   target="_blank" 
