Big AQuA updates

--- a/src/pages/contact.mdx
+++ b/src/pages/contact.mdx
@@ -1,7 +1,7 @@
-import MyPage from './contact_code';
+import ContactPage from './contact_code';
 
 # Contact SIL AI
 
 Please fill out the form below and we will get back to you.
 
-<MyPage />
+<ContactPage />
