--- a/src/pages/projects/alpha2.mdx
+++ b/src/pages/projects/alpha2.mdx
@@ -8,11 +8,11 @@ Alpha2 is a service that leverages the latest advances in Artificial Intelligenc
 translation and text-to-speech in more than 1,000 languages. Alpha2 builds upon SIL's <a href="serval">Serval</a> and other tools, extending their capabilities 
 to work with materials related to education, development, trauma healing, anti-trafficking, and more. 
 
-The last several years have seen tremendous advances in machine translation capabilities for high-resource languages, 
+The last several years have seen tremendous advances in machine translation capabilities for majority languages, 
 but the same level of progress has not yet been seen for smaller language communities. This has largely been due to 
 lower levels of data availability and less economic demand for translation to and from languages with fewer speakers. 
 With Alpha2, we are able to make use of SIL’s extensive multilingual parallel data to fine-tune machine translation models that achieve better results 
-in low-resource languages, helping bridge the gap these traditionally underserved language communities face.
+in minority languages, helping bridge the gap these traditionally underserved language communities face.
 
 <Button 
   label="TRY ALPHA2" 
