Add fieldworks link

--- a/src/pages/projects/flextrans.mdx
+++ b/src/pages/projects/flextrans.mdx
@@ -8,7 +8,9 @@ import ReactPlayer from 'react-player'
 
 <p style={{ paddingTop: '30px' }}>
     FLExTrans is a specialized machine translation tool designed to assist Bible translators in translating between related languages. 
-    By integrating FieldWorks Language Explorer (FLEx) with modern tools, FLExTrans enables structured, rule-based translation. 
+    By integrating 
+    <a href="https://software.sil.org/fieldworks/" target="_blank"> Fieldworks Language Explorer (FLEx) </a>
+    with modern tools, FLExTrans enables structured, rule-based translation. 
     This ensures linguistic accuracy while leveraging the similarities between languages.
 </p>
 
