--- a/src/pages/contact.mdx
+++ b/src/pages/contact.mdx
@@ -1,7 +1,3 @@
-import ContactPage from './contact_code';
+import MailChimpContactPage from './mailchimp_contact_code';
 
-# Contact SIL AI
-
-Please fill out the form below and we will get back to you.
-
-<ContactPage />
+<MailChimpContactPage />
