--- a/src/pages/projects.mdx
+++ b/src/pages/projects.mdx
@@ -20,6 +20,9 @@ by bringing attention to potential issues and helping them gain insights into th
 ## [Faithbridge](projects/faithbridge)
 Faithbridge is a chatbot that allows users to interact with a set of ground-truth Bible translation resources.
 
+## [FLExTrans](projects/flextrans)
+FLExTrans is a specialized machine translation tool designed to assist Bible translators in translating between related languages.
+
 ## [Lynx (coming soon)](projects/lynx)
 Lynx is a framework that seamlessly weaves AI tools into Bible translation editing software. 
 
