--- a/src/pages/projects/lynx.mdx
+++ b/src/pages/projects/lynx.mdx
@@ -2,7 +2,7 @@
 title: Lynx
 ---
 
-# Lynx (Coming soon)
+# Lynx (in preview)
 
 ## Vision
 
@@ -43,7 +43,11 @@ Translation editors seamlessly integrate these tools via APIs, creating a compon
 
 ## Features and Future Development
 
-- The first Lynx implementation will be a punctuation checker integrated into 
-<a href="/projects/scriptureforge" target="_blank">Scripture Forge</a>, available for preview in late 2024.
-- Additional features planned for 2025 include: Key terms consistency checking, spell checking, 
+- The first Lynx implementation is a punctuation checker integrated into 
+<a href="/projects/scriptureforge" target="_blank">Scripture Forge</a>, available for preview 
+now - contact <a href="mailto:support_team@scriptureforge.org">support_team@scriptureforge.org</a> if
+you would like to help us test it.
+
+- Additional features pending resource availability include:  integrated quality checks through the Augmented Quality Assessment (AQuA) project,
+key terms consistency checking, spell checking, 
 multi-option auto-complete recommendations, and exegetical resource recommendations.
