--- a/src/pages/projects/scriptureforge.mdx
+++ b/src/pages/projects/scriptureforge.mdx
@@ -10,7 +10,7 @@ featuring AI help and tools for community review.
 ## Overview
 
 - **Translation Drafting**: Scripture Forge uses artificial intelligence to generate rough drafts 
-based on previously translated Scripture. When a project contains about 8000 verses across multiple genres, 
+based on previously translated Scripture. When a project contains about 8000 verses across multiple genres - equivalent to a complete New Testament -
 draft generation can provide a draft of the next book for the project or back translation, 
 helping teams maintain consistency and naturalness. 
 Earlier in the translation project, teams can use the Translation Suggestions to generate predicted words 
@@ -26,14 +26,12 @@ can interact via typed text and audio recording.
 
 - Integrated with Paratext projects, roles, and notes.
 - Works seamlessly on both mobile devices and desktops.
-- Fully supports audio for Scripture checking, including text syncing via timing files.
-- Offline functionality stores data locally that can be synced later once an internet connection is re-established.
+- Fully supports audio for Scripture checking, including highlighting each verse as it is read aloud.
+- Offline functionality allows team members to work offline, with their changes seamlessly saved once an internet connection is re-established.
 
 ## Future Development
-Scripture Forge will continue to offer new tooling to support multiple translation workflows. 
-Release of the first version of the integrated Lynx editor is scheduled for late 2024 to provide access 
-to AI-enabled text checking for low-resource languages as well as integrated quality checks through 
-the <a href="/projects/AQuA" target="_blank">Augmented Quality Assessment (AQuA)</a> project.
+Scripture Forge will continue to offer new tooling to support multiple translation workflows 
+and research-based draft generation processes for early translation projects that don’t yet have the minimum recommended translation data.
 
 ## Access
 
