Improved Faithbridge text to be less hypey and more humble

--- a/src/pages/projects/faithbridge.mdx
+++ b/src/pages/projects/faithbridge.mdx
@@ -4,11 +4,13 @@ title: Faithbridge
 
 # Faithbridge
 
-Faithbridge is a reliable AI-powered Bible Q&A app that enables local language translators to interact 
-with Bible translation resources in 80 languages via audio and text. This saves teams tremendous amounts of time filtering 
-through thousands of translation resources and helps them find exactly the documents they need 
-to learn about the context behind passages they are translating. Faithbridge provides answers based on resources 
-(including images and videos) found within the <a href="http://aquifer.bible" target="_blank">Bible Aquifier</a>.
+<p>Faithbridge is an AI-powered Bible Q&A app that enables local language translators to interact 
+with Bible translation resources in 80 languages via audio and text. This can save teams time filtering 
+through thousands of translation resources and help them find the documents they need 
+to learn about the context behind passages they are translating. Faithbridge provides answers based on resources found within the <a href="http://aquifer.bible" target="_blank">Bible Aquifer</a>, the <a href="https://tips.translation.bible/" target="_blank">Translation Insights and Perspectives</a> website, and MACULA <a href="https://github.com/Clear-Bible/macula-greek" target="_blank">Greek</a> and <a href="https://github.com/Clear-Bible/macula-hebrew" target="_blank">Hebrew</a> datasets.
+</p>
+
+<p>While Faithbridge is designed to summarize and represent the content of the reference resources, as an AI chatbot it may not always accurately reflect the views in the original sources, so we strongly encourage users to consult the sources (which are provided below the chatbot response) directly for the most accurate information.</p>
 
 <div style={{ display: 'flex', justifyContent: 'center', alignItems: 'center' }}>
   <img src="/img/faithbridge_prompt.png" alt="Faithbridge main page" style={{ width: '80%', marginBottom: '40px'}} />
